# rust_ws_broker

./: Cargo.toml  Dockerfile  Makefile  cloudformation.yml
src/: error_handling.rs  main.rs  util.rs
src/routing/: client.rs  discovery.rs  host.rs  messages.rs  mod.rs  routing_table.rs
