[package]
name = "rust-test"
version = "0.1.0"
authors = ["Conor Turner <conorscturner@gmail.com>"]
edition = "2018"


[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
dns-lookup = "1.0.5"
warp = "0.3"
futures = "0.3"
json_logger = "0.1"
pretty_env_logger = "0.4"
log = "0.4.14"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
jsonwebtoken = "7.2.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio-stream = "0.1.4"
tokio-tungstenite = "0.13.0"
hyper = "0.14.4"
futures-util = "0.3.13"
url = "2.2.1"